# openprover

./: .gitignore  DOCS.md  README.md  pyproject.toml  todo.txt
examples/: cauchy_schwarz.md  collatz.md  e_irrational.md  erdos_838.md  infinite_primes.md  sqrt2_irrational.md
lumi/: deploy.sh  nanoproof-container.def
lumi/jobs/: job_interact.sh  job_interact_cpu.sh  job_trm_train.sh
lumi/scripts/: build_container.sh
openarxiv/: arxiv.py
openprover/: cli.py  display.py  inspect.py  lean.py  llm.py  prompts.py  prover.py  tui.py
openprover/lean/: __init__.py  core.py  mcp_server.py  tools.py
openprover/llm/: __init__.py  _base.py  claude.py  hf.py  mistral.py
openprover/tui/: __init__.py  _colors.py  _input.py  _nav.py  _render.py  _steps.py  _stream.py  _tabs.py  _text.py  _types.py  headless.py  tui.py
parser/: parser.py
scripts/: baseline.py  bench_hf.py  lean_search.py  ping_hf.py  ping_mistral.py  ping_vllm.py  run_minif2f.py  run_putnam.py  serve_hf.py
